// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SamwiseIcon matches snapshot. 1`] = `
<span
  title="alert"
>
  <svg
    alt="alert"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="alert"
    width="1em"
  >
    alert.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 2`] = `
<span
  title="Due date"
>
  <svg
    alt="Due date"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="Due date"
    width="1em"
  >
    calendar-dark.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 3`] = `
<span
  title="Due date"
>
  <svg
    alt="Due date"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="Due date"
    width="1em"
  >
    calendar-light.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 4`] = `
<span
  title="Checked"
>
  <svg
    alt="Checked"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="Checked"
    width="1em"
  >
    checked-dark.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 5`] = `
<span
  title="Checked"
>
  <svg
    alt="Checked"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="Checked"
    width="1em"
  >
    checked.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 6`] = `
<span
  title="clock"
>
  <svg
    alt="clock"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="clock"
    width="1em"
  >
    clock.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 7`] = `
<span
  title="Reorder"
>
  <svg
    alt="Reorder"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="Reorder"
    width="1em"
  >
    grabbers.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 8`] = `
<span
  title="Hide"
>
  <svg
    alt="Hide"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="Hide"
    width="1em"
  >
    hide.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 9`] = `
<span
  title="Unpin from Focus"
>
  <svg
    alt="Unpin from Focus"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="Unpin from Focus"
    width="1em"
  >
    pin-2-dark-filled.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 10`] = `
<span
  title="Pin to Focus"
>
  <svg
    alt="Pin to Focus"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="Pin to Focus"
    width="1em"
  >
    pin-2-dark-outline.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 11`] = `
<span
  title="Unpin from Focus"
>
  <svg
    alt="Unpin from Focus"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="Unpin from Focus"
    width="1em"
  >
    pin-2-light-filled.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 12`] = `
<span
  title="Pin to Focus"
>
  <svg
    alt="Pin to Focus"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="Pin to Focus"
    width="1em"
  >
    pin-2-light-outline.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 13`] = `
<span
  title="Settings"
>
  <svg
    alt="Settings"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="Settings"
    width="1em"
  >
    settings.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 14`] = `
<span
  title="Show"
>
  <svg
    alt="Show"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="Show"
    width="1em"
  >
    show.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 15`] = `
<span
  title="Tag"
>
  <svg
    alt="Tag"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="Tag"
    width="1em"
  >
    tag.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 16`] = `
<span
  title="unchecked"
>
  <svg
    alt="unchecked"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="unchecked"
    width="1em"
  >
    unchecked.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 17`] = `
<span
  title="More"
>
  <svg
    alt="More"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="More"
    width="1em"
  >
    v.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 18`] = `
<span
  title="Delete"
>
  <svg
    alt="Delete"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="Delete"
    width="1em"
  >
    XDark.svg
  </svg>
</span>
`;

exports[`SamwiseIcon matches snapshot. 19`] = `
<span
  title="Delete"
>
  <svg
    alt="Delete"
    height="1em"
    onKeyUp={[Function]}
    tabIndex={0}
    title="Delete"
    width="1em"
  >
    XLight.svg
  </svg>
</span>
`;
